@@ -25,7 +25,6 @@ Global
 		{5C79F633-AA43-455B-94D4-95AFD74D2F38}.Release|x64.ActiveCfg = Release|x64
 		{5C79F633-AA43-455B-94D4-95AFD74D2F38}.Release|x64.Build.0 = Release|x64
 		{4D70383D-A219-4851-838E-AB78CA5AE2FC}.Debug|Win32.ActiveCfg = Debug|Win32
-		{4D70383D-A219-4851-838E-AB78CA5AE2FC}.Debug|Win32.Build.0 = Debug|Win32
 		{4D70383D-A219-4851-838E-AB78CA5AE2FC}.Debug|x64.ActiveCfg = Debug|x64
 		{4D70383D-A219-4851-838E-AB78CA5AE2FC}.Debug|x64.Build.0 = Debug|x64
 		{4D70383D-A219-4851-838E-AB78CA5AE2FC}.Release|Win32.ActiveCfg = Release|Win32
@@ -33,6 +32,7 @@ Global
 		{4D70383D-A219-4851-838E-AB78CA5AE2FC}.Release|x64.ActiveCfg = Release|x64
 		{4D70383D-A219-4851-838E-AB78CA5AE2FC}.Release|x64.Build.0 = Release|x64
 		{45837AA9-DBA0-408C-AC52-FC8A2B613363}.Debug|Win32.ActiveCfg = Debug|Win32
+		{45837AA9-DBA0-408C-AC52-FC8A2B613363}.Debug|Win32.Build.0 = Debug|Win32
 		{45837AA9-DBA0-408C-AC52-FC8A2B613363}.Debug|x64.ActiveCfg = Debug|x64
 		{45837AA9-DBA0-408C-AC52-FC8A2B613363}.Debug|x64.Build.0 = Debug|x64
 		{45837AA9-DBA0-408C-AC52-FC8A2B613363}.Release|Win32.ActiveCfg = Release|Win32
